# py-taxi-service-startproject

./: .evn.sample  .flake8  .gitignore  .gitignore.py  README.md  checklist.md  db.sqlite3  gitignore  manage.py  models.py  private.py  pyproject.toml  pyrightconfig.json  pyvenv.cfg  requirements.text  requirements.txt  requirments.txt
.github/workflows/: test.yml
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
migrations/: 0001_initial.py
py_taxi/: asgi.py  settings.py  urls.py  wsgi.py
taxi/: admin.py  apps.py  models.py  tests.py  views.py  аа.py
taxi/migrations/: 0001_initial.py  0002_alter_car_driver_alter_car_manufacturer.py  0002_alter_car_drivers.py  0002_alter_car_drivers_alter_car_manufacturer.py  0002_alter_car_drivers_alter_car_manufacturer_and_more.py  0002_alter_car_manufacturer.py  0002_alter_car_manufacturer_alter_car_model_and_more.py  0002_alter_car_manufacturer_alter_driver_license_number.py  0002_alter_car_manufacturer_alter_manufacturer_country.py  0002_alter_car_manufacturer_alter_manufacturer_name.py  0002_alter_car_model_alter_driver_license_number_and_more.py  0002_alter_car_options.py  0002_alter_car_options_alter_driver_licence_number.py  0002_alter_car_options_alter_driver_options_and_more.py  (+154 more)
taxi_service/: .env  .env.example  .gitignore  Unnamed.run.xml  asgi.py  db.sqlite3  settings.py  urls.py  wsgi.py
taxi_servise/: asgi.py  settings.py  urls.py  wsgi.py
taxiservice/: asgi.py  settings.py  urls.py  wsgi.py
tests/: .gitignore  test_taxi.py
texi_service/: asgi.py  settings.py  urls.py  wsgi.py
(+15 files in other folders)
